# GobotAgent

./: .gitignore  README.md
client/: app.go  config.yml  go.mod  go.sum  main.go  wails.json
client/backend/models/: SettingData.go
client/backend/service/: config.go  constant.go  logger.go  port.go  run.go
client/backend/service/env/: dev.go  prod.go
client/backend/service/sys_exec/: linux_mac.go  windows.go
client/frontend/: package.json  package.json.md5  pnpm-lock.yaml
client/frontend/src/: App.tsx  Setting.tsx  types.ts
client/frontend/wailsjs/go/: models.ts
client/frontend/wailsjs/go/main/: App.d.ts  App.js
server/: README.md  pyproject.toml
server/gobot_agent/: custom_agent.py  custom_browser_context.py  custom_massage_manager.py  custom_prompts.py  custom_views.py  main.py  utils.py
